fullSandbox11072023/force-app/main/default/objects/Contact/fields/Litmos__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Full_Name__c</fullName>
    <formula>FirstName + &quot; &quot; +  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>