fullSandbox11072023/force-app/main/default/objects/Contact/fields/Litmos__OriginalId__c.field-meta.xml
<CustomField>
    <fullName>Litmos__OriginalId__c</fullName>
    <label>OriginalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>