fullSandbox11072023/force-app/main/default/objects/Contact/fields/Litmos__p_Completed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Litmos__p_Completed_Percentage__c</fullName>
    <formula>Litmos__Total_Sum_Percentages__c  /  Litmos__Courses_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>p_Completed Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>