fullSandbox11072023/force-app/main/default/objects/Contact/fields/Litmos__User_Id__c.field-meta.xml
<CustomField>
    <fullName>Litmos__User_Id__c</fullName>
    <externalId>true</externalId>
    <label>User Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>