fullSandbox11072023/force-app/main/default/objects/Contact/fields/Mailing_Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Full__c</fullName>
    <formula>if(MailingCity != &apos;&apos;,MailingStreet + BR() + 
MailingCity+ &quot;, &quot;+ MailingState + &quot; &quot; + MailingPostalCode,&apos;&apos;)</formula>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>