fullSandbox11072023/force-app/main/default/objects/Contact/fields/MANTA_Physician_s_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>MANTA_Physician_s_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MANTA Physician&apos;s Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>