fullSandbox11072023/force-app/main/default/objects/Contact/fields/MANTA_Physician_s_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>MANTA_Physician_s_Sales_Rep_Name__c</fullName>
    <formula>MANTA_Physician_s_Sales_Rep__r.FirstName +&quot; &quot;+ MANTA_Physician_s_Sales_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MANTA Physician&apos;s Sales Rep Name</label>
    <type>Text</type>
</CustomField>