fullSandbox11072023/force-app/main/default/objects/Contact/fields/MANTA_Recertification__c.field-meta.xml
<CustomField>
    <fullName>MANTA_Recertification__c</fullName>
    <formula>!ISBLANK(X10th_Case_Completed_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MANTA Recertification</label>
    <type>Checkbox</type>
</CustomField>