fullSandbox11072023/force-app/main/default/objects/Contact/fields/Medical_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_License_Number__c</fullName>
    <inlineHelpText>ME Number</inlineHelpText>
    <label>Medical License Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>