fullSandbox11072023/force-app/main/default/objects/Contact/fields/Medical_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Medical_Specialty__c</fullName>
    <label>Medical Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Respiratory Director</fullName>
            </value>
            <value>
                <fullName>Respiratory Therapist</fullName>
            </value>
            <value>
                <fullName>Anesthesia Director</fullName>
            </value>
            <value>
                <fullName>Anesthesiologist</fullName>
            </value>
            <value>
                <fullName>Anesthesia Tech</fullName>
            </value>
            <value>
                <fullName>Materials Management</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Infection Control</fullName>
            </value>
            <value>
                <fullName>Neonatologist</fullName>
            </value>
            <value>
                <fullName>CRNA</fullName>
            </value>
            <value>
                <fullName>Pain Nurse</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Anesthesia- Pain Management</fullName>
            </value>
            <value>
                <fullName>Hematology/Oncology</fullName>
            </value>
            <value>
                <fullName>Interventional Radiology</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Stem Cell Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>