fullSandbox11072023/force-app/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes from Outlook contact</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>