fullSandbox11072023/force-app/main/default/objects/Contact/fields/Old_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Id__c</fullName>
    <externalId>true</externalId>
    <label>Old Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>