fullSandbox11072023/force-app/main/default/objects/Contact/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <description>OldId for Contacts migrated from AU Instance.</description>
    <inlineHelpText>OldId for Contacts migrated from AU Instance.</inlineHelpText>
    <label>OldId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>