fullSandbox11072023/force-app/main/default/objects/Contact/fields/OldOwnerId__c.field-meta.xml
<CustomField>
    <fullName>OldOwnerId__c</fullName>
    <description>OldOwnerId for Contacts migrated from AU Instance.</description>
    <inlineHelpText>OldOwnerId for Contacts migrated from AU Instance.</inlineHelpText>
    <label>OldOwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>