fullSandbox11072023/force-app/main/default/objects/Contact/fields/Position_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Job_Title__c</fullName>
    <label>Position/Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abdominal Transplant Surgeon</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>ALS Provider</fullName>
            </value>
            <value>
                <fullName>Anesthesia Director</fullName>
            </value>
            <value>
                <fullName>Anesthesia Tech</fullName>
            </value>
            <value>
                <fullName>Anesthesiologist</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Asst Chief</fullName>
            </value>
            <value>
                <fullName>Bariatric Surgeon</fullName>
            </value>
            <value>
                <fullName>Bio Med</fullName>
            </value>
            <value>
                <fullName>BLS Provider</fullName>
            </value>
            <value>
                <fullName>Buyer/Purchasing Staff</fullName>
            </value>
            <value>
                <fullName>Captain</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Cardiopulmonary Director</fullName>
            </value>
            <value>
                <fullName>Cardiopulmonary Manager</fullName>
            </value>
            <value>
                <fullName>Category Manager</fullName>
            </value>
            <value>
                <fullName>CCL Manager</fullName>
            </value>
            <value>
                <fullName>CCL Scheduler</fullName>
            </value>
            <value>
                <fullName>Central Supply</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Chief</fullName>
            </value>
            <value>
                <fullName>Chief Nursing Officer</fullName>
            </value>
            <value>
                <fullName>Chief of CV</fullName>
            </value>
            <value>
                <fullName>Chief of General Surgery</fullName>
            </value>
            <value>
                <fullName>Chief of GYN</fullName>
            </value>
            <value>
                <fullName>CLABSI Team</fullName>
            </value>
            <value>
                <fullName>Clinical Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>