fullSandbox11072023/force-app/main/default/objects/Contact/fields/Position_Job_Title_ANZ__c.field-meta.xml
<CustomField>
    <fullName>Position_Job_Title_ANZ__c</fullName>
    <label>Position/Job Title ANZ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal Officer</fullName>
            </value>
            <value>
                <fullName>Anaesthetic NUM</fullName>
            </value>
            <value>
                <fullName>Anaesthetic Technician</fullName>
            </value>
            <value>
                <fullName>Anaesthetist</fullName>
            </value>
            <value>
                <fullName>Assistant Surgeon</fullName>
            </value>
            <value>
                <fullName>Biomedical Engineer</fullName>
            </value>
            <value>
                <fullName>Bio-Medical Engineer</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Cardiologist - I&amp;S</fullName>
            </value>
            <value>
                <fullName>Cardiologist - Interventional</fullName>
            </value>
            <value>
                <fullName>Cardiologist-Structural</fullName>
            </value>
            <value>
                <fullName>Cardiothoracic Surgeon</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Clinical Director</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Consultant</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Educator</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Manager</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Specialist</fullName>
            </value>
            <value>
                <fullName>Clinical Products Advisor</fullName>
            </value>
            <value>
                <fullName>Clinical Services Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Clinical Support Officer</fullName>
            </value>
            <value>
                <fullName>Clinical Trials Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Community Nurse</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Continence Nurse</fullName>
            </value>
            <value>
                <fullName>Contracts Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>