fullSandbox11072023/force-app/main/default/objects/Contact/fields/Position_Job_Title_LatAm__c.field-meta.xml
<CustomField>
    <fullName>Position_Job_Title_LatAm__c</fullName>
    <label>Position/Job Title*</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesia Director</fullName>
            </value>
            <value>
                <fullName>Anesthesia Tech</fullName>
            </value>
            <value>
                <fullName>Anesthesiologist</fullName>
            </value>
            <value>
                <fullName>Buyer/Purchasing Staff</fullName>
            </value>
            <value>
                <fullName>Chief of CV</fullName>
            </value>
            <value>
                <fullName>Chief of General Surgery</fullName>
            </value>
            <value>
                <fullName>Chief of GYN</fullName>
            </value>
            <value>
                <fullName>Contracts/Supply Chain Manager</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>CRNA</fullName>
            </value>
            <value>
                <fullName>CV Nurse Coordinator</fullName>
            </value>
            <value>
                <fullName>CV Surgeon</fullName>
            </value>
            <value>
                <fullName>CV team Lead</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Director of Peri-Operative services</fullName>
            </value>
            <value>
                <fullName>ED Director</fullName>
            </value>
            <value>
                <fullName>ED Nurse Manager</fullName>
            </value>
            <value>
                <fullName>ENT Nurse Coordinator</fullName>
            </value>
            <value>
                <fullName>ENT Surgeon</fullName>
            </value>
            <value>
                <fullName>General Nurse Coordinator</fullName>
            </value>
            <value>
                <fullName>General Surgeon</fullName>
            </value>
            <value>
                <fullName>General Team Lead</fullName>
            </value>
            <value>
                <fullName>GYN surgeon</fullName>
            </value>
            <value>
                <fullName>Infection Control</fullName>
            </value>
            <value>
                <fullName>Instrument Coordinator</fullName>
            </value>
            <value>
                <fullName>IV Theraphy</fullName>
            </value>
            <value>
                <fullName>Labor &amp; Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Logistics Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>