fullSandbox11072023/force-app/main/default/objects/Contact/fields/Preferred_language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_language__c</fullName>
    <label>Preferred language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English (American)</fullName>
            </value>
            <value>
                <fullName>English (Australian)</fullName>
            </value>
            <value>
                <fullName>English (New Zealand)</fullName>
            </value>
            <value>
                <fullName>French (Canada)</fullName>
            </value>
            <value>
                <fullName>French (France)</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Hebrew (right to left)</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Portuguese (Brazil)</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Simplified Chinese (China)</fullName>
            </value>
            <value>
                <fullName>Spanish (Latin America)</fullName>
            </value>
            <value>
                <fullName>Traditional Chinese (Hong Kong/Taiwan)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>