fullSandbox11072023/force-app/main/default/objects/Contact/fields/Professional_Affiliations_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Professional_Affiliations_Memberships__c</fullName>
    <label>Professional Affiliations &amp; Memberships</label>
    <type>TextArea</type>
</CustomField>