fullSandbox11072023/force-app/main/default/objects/Contact/fields/Purchase_Decision_Influence__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Decision_Influence__c</fullName>
    <label>Purchasing Influence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Decision Maker</fullName>
            </value>
            <value>
                <fullName>Key Influencer</fullName>
            </value>
            <value>
                <fullName>Product Champion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>