fullSandbox11072023/force-app/main/default/objects/Contact/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <length>18</length>
    <type>Text</type>
</CustomField>