fullSandbox11072023/force-app/main/default/objects/Contact/fields/RES_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>RES_Lead_Score__c</fullName>
    <label>RES Lead Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>