fullSandbox11072023/force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Anaesthetic Technician</fullName>
            </value>
            <value>
                <fullName>Anaesthetist</fullName>
            </value>
            <value>
                <fullName>Assistant in Nursing</fullName>
            </value>
            <value>
                <fullName>Biomedical Engineer</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Cardiothoracic Surgeon</fullName>
            </value>
            <value>
                <fullName>Chief Biomedical Engineer</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Chief Medical Officer</fullName>
            </value>
            <value>
                <fullName>Chief Radiographer</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Consultant</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Educator</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Manager</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Specialist</fullName>
            </value>
            <value>
                <fullName>Community Nurse</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Co-ordinator</fullName>
            </value>
            <value>
                <fullName>CSSD Officer</fullName>
            </value>
            <value>
                <fullName>Dialysis Nurse</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Director of Nursing</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>DVA Nurse</fullName>
            </value>
            <value>
                <fullName>Educator</fullName>
            </value>
            <value>
                <fullName>Equipment Officer</fullName>
            </value>
            <value>
                <fullName>Gastroenterologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>