fullSandbox11072023/force-app/main/default/objects/Contact/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CKE (Confident Knowledgeable Experimentor)</fullName>
            </value>
            <value>
                <fullName>PFTom (Patient Friendly Trade-off maker)</fullName>
            </value>
            <value>
                <fullName>OMM (Open Minded Moderate)</fullName>
            </value>
            <value>
                <fullName>CCP (Cautious Conservative Practitioner)</fullName>
            </value>
            <value>
                <fullName>RAU (Risk Averse Unconvinceable/Unfriendly)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>