fullSandbox11072023/force-app/main/default/objects/Contact/fields/Skype_Name__c.field-meta.xml
<CustomField>
    <fullName>Skype_Name__c</fullName>
    <label>Skype Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>