fullSandbox11072023/force-app/main/default/objects/Contact/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if thi contact is a speaker at any conferences or events</description>
    <inlineHelpText>Check if thi contact is a speaker at any conferences or events</inlineHelpText>
    <label>Speaker</label>
    <type>Checkbox</type>
</CustomField>