fullSandbox11072023/force-app/main/default/objects/Contact/fields/Specific_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Specific_Lead_Source__c</fullName>
    <label>Specific Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Place holder field to map lead source to contact</fullName>
            </value>
            <value>
                <fullName>American Association for Respiratory Care (AARC)</fullName>
            </value>
            <value>
                <fullName>FOCUS</fullName>
            </value>
            <value>
                <fullName>National Association of Neonatal Nurses (NANN)</fullName>
            </value>
            <value>
                <fullName>American Society of Anesthesiologists (ASA)</fullName>
            </value>
            <value>
                <fullName>Society of Airway Management (SAM)</fullName>
            </value>
            <value>
                <fullName>American Society of Anesthesia Technologists &amp; Technicians (ASATT)</fullName>
            </value>
            <value>
                <fullName>Post Graduate Assembly (PGA)</fullName>
            </value>
            <value>
                <fullName>Association for Professionals in Infection Control and Epidemiology (APIC)</fullName>
            </value>
            <value>
                <fullName>Society of Critical Care Medicine (SCCM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>