fullSandbox11072023/force-app/main/default/objects/Contact/fields/SU_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>SU_Lead_Score__c</fullName>
    <label>SU Lead Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>