fullSandbox11072023/force-app/main/default/objects/Contact/fields/Surgical_Favorite__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Favorite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this is your favorite contact - leave blank if it&apos;s not.</inlineHelpText>
    <label>Favorite</label>
    <type>Checkbox</type>
</CustomField>