fullSandbox11072023/force-app/main/default/objects/Contact/fields/Teleflex_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Teleflex_Product_of_Interest__c</fullName>
    <label>Teleflex Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrow – Pain Management Products</fullName>
            </value>
            <value>
                <fullName>Rusch – Laryngoscopes and Airway Products</fullName>
            </value>
            <value>
                <fullName>Hudson RCI – Respiratory Therapy Products</fullName>
            </value>
            <value>
                <fullName>LMA – Laryngeal Mask Airways and Atomization Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>