fullSandbox11072023/force-app/main/default/objects/Contact/fields/territorykey__c.field-meta.xml
<CustomField>
    <fullName>territorykey__c</fullName>
    <formula>Account.Territory_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>territory key</label>
    <type>Text</type>
</CustomField>