fullSandbox11072023/force-app/main/default/objects/Contact/fields/User_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Key__c</fullName>
    <formula>UPPER(FirstName &amp; LastName &amp; Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Key</label>
    <type>Text</type>
</CustomField>