fullSandbox11072023/force-app/main/default/objects/Contact/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Novice</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Super Expert/Thought Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>