fullSandbox11072023/force-app/main/default/objects/Contact/fields/VAC_Committee_Member__c.field-meta.xml
<CustomField>
    <fullName>VAC_Committee_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAC Committee Member</label>
    <type>Checkbox</type>
</CustomField>