fullSandbox11072023/force-app/main/default/objects/Contact/fields/X9_Month_Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>X9_Month_Check_In_Date__c</fullName>
    <formula>X10th_Case_Completed_Date__c + 270</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>9 Month Check-In Date</label>
    <type>Date</type>
</CustomField>