fullSandbox11072023/force-app/main/default/objects/Contact/fields/X9_Month_Check_in_Paperwork_Received__c.field-meta.xml
<CustomField>
    <fullName>X9_Month_Check_in_Paperwork_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>9-Month Check-in Paperwork Received</label>
    <type>Checkbox</type>
</CustomField>