fullSandbox11072023/force-app/main/default/objects/Contact/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <description>Standard contact record type for all Teleflex contacts</description>
    <label>Contact</label>
</RecordType>