fullSandbox11072023/force-app/main/default/objects/Contact/validationRules/Department_Other_field_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Department_Other_field_required</fullName>
    <active>true</active>
    <description>If Other is selected from the Department picklist, the end user is required to enter the name in an other department field.</description>
    <errorConditionFormula>AND( TEXT( Department_Picklist__c )  = &quot;Other&quot; , ISBLANK( Department )  )</errorConditionFormula>
    <errorDisplayField>Department</errorDisplayField>
    <errorMessage>Please enter the name of the Other Department.</errorMessage>
</ValidationRule>