fullSandbox11072023/force-app/main/default/objects/Contact/validationRules/Email_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Cannot_Be_Blank</fullName>
    <active>false</active>
    <description>Enforce email address for Contacts</description>
    <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email address cannot be blank.</errorMessage>
</ValidationRule>