fullSandbox11072023/force-app/main/default/objects/Contact/validationRules/Fellowship_Concentration_and_Grad_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Fellowship_Concentration_and_Grad_Date</fullName>
    <active>true</active>
    <description>Graduation Date and Fellowship Concentration  are req</description>
    <errorConditionFormula>AND( 

Fellow__c = TRUE,

OR(

 ISBLANK(TEXT(FellowConcentration__c)),

ISBLANK(GraduationDate__c)

)

)</errorConditionFormula>
    <errorMessage>Please make sure you fill in the Graduation Date, Fellow Concentration, or both</errorMessage>
</ValidationRule>